Sign in / Update user last login date
When user authenticate using GN5 (with OAuth or database), last login date was not updated.

Refactor to be able to use the same user methods in OAuth providers, DB providers (and future providers eg. LDAP).

Co-authored-by: Jose García <josegar74@gmail.com>